--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -35,8 +35,9 @@
 .lx-hovertarg li a:hover{color: #c13232;font-weight: bold;transform: scale(1.1);-webkit-transform: scale(1.1);}
 #guItems .atities-top{position:absolute;top:65px;}
 .atities{color: #333;font-size: 16px;text-indent: 20px;display: block;position: absolute;top: 57px;}
-.atities:hover{ color: #c13232;}
+.atities:link{ color: #333;}
 .atities:visited{ color: #999;}
+.atities:hover{ color: #c13232;}
 </style>
 {% for floor in shouye %} {#国家#}
 {% set ad_seat_index = loop.index + 10 %}
