地图城市cookie容错，意见反馈上传目录，热门签儿被轮播图盖住 审核人：维久

--- a/views/about/contact.html
+++ b/views/about/contact.html
@@ -378,7 +378,12 @@ width:50px;}
         else {
           var arrFiles = [];
           for (var i = 0, file; file = files[i]; i++) {
+            console.log('file', file);
             if (file.type.indexOf("image") == 0) {
+              if (file.type.split('/')[1] != 'png' || file.type.split('/')[1] != 'jpg') {
+                layer.msg('只支持png或者jpg格式的图片');
+                return false;
+              }
               if (file.size >= 1024000*2) {
                 layer.msg('您这张"'+ file.name +'"图片大小过大，应小于2M');
               } else {
