解决意见反馈bug

--- a/views/about/contact.html
+++ b/views/about/contact.html
@@ -459,7 +459,7 @@ width:50px;}
         var valSelectTxt = $(".selectControl").find("option:selected").text()
         var groupText = valSelect +'_'+ valSelectTxt
         var valArea = $(".formControl").val()
-        if((valRadio == '' || valSelect == '' || valArea == '') || $(".formControl").val().length < 20){
+        if((valRadio == '' || valSelect == '' || valArea == '') && $(".formControl").val().length < 20){
           alert('请填写完整的信息')
           return false
         }
@@ -481,12 +481,13 @@ width:50px;}
               if(res.code == 0){
                 alert("反馈成功")
                 window.setTimeout(function(){
-                  $(".formControl").val("") //清空文本域的值
-                  $(".checkRadio label").removeClass('checked')
-                  $(".checkRadio label > i").css('display','none')
-                  $(".selectControl").find("option:selected").eq(0).text("(B)北京分公司");
-                  $(".selectControl").find("option").eq(0).attr("selected","selected");
-                    // window.location.reload();
+                  // $(".formControl").val("") //清空文本域的值
+                  // $(".checkRadio label").removeClass('checked')
+                  // $(".checkRadio label > i").css('display','none')
+                  // $(".selectControl").find("option:selected").eq(0).text("(B)北京分公司");
+                  // $(".selectControl").find("option").eq(0).attr("selected","selected");
+                  window.location.reload(true);
+                  // $(".areaContent").find('span').text('您可以填写20—500字')
                 },300);
               }
             },
