--- a/views/widget/top/top_liuxue.html
+++ b/views/widget/top/top_liuxue.html
@@ -1,10 +1,10 @@
 <div class="top" style="position:relative;z-index: 1002;" data-uinfo="{{index_userinfo.unread_num}}">
     <div class="dui-layout-lg top-con clearfix" style="position: relative;">
-        <div class="top-con-left" style="display: inline-block">
+        <div class="top-con-left" style="display: inline-block;width: 100px;">
             <img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400">
             <span style="font-size: 12px;color: #666;">400-010-8000</span>
           </div>
-        <div class="top-con-right" style="display: inline-block">
+        <div class="top-con-right" style="display: inline-block;width: 180px;">
         <span class="top_phone"><i></i></span>
         {#<span style="position: relative;margin-right: 5px;"><a style="font-size: 12px;" target="_blank" id="" rel="nofollow">消息</a><i class="text_shu" style="font-size: 12px;top: -7px">9</i></span>
         <span class="bor"></span>#}
