--- a/views/widget/new_nav_first/new_nav_first.html
+++ b/views/widget/new_nav_first/new_nav_first.html
@@ -33,7 +33,7 @@
                             <i class="iconfont">&#xe684;</i><span>010-65685656/027-67811600</span>
                         </div>
                     </div>
-                    <div class="city-box-body">
+                    <div class="city-box-body" id="changeCityBox">
                         <div class="current-city" id="back-current-city">&lt;返回当前城市</div>
                         <div class="city-colum clearfix" id="home-citys">
                             <ul class="colum-left">
