返回当前城市不跳转到分公司首页 审核人：海亮

--- a/views/widget/new_nav_first/error_nav.html
+++ b/views/widget/new_nav_first/error_nav.html
@@ -34,7 +34,7 @@
                         </div>
                     </div>
                     <div class="city-box-body">
-                        <div class="current-city" id="back-current-city">&lt;返回当前城市</div>
+                        <div class="current-city" id="error-back-current-city">&lt;返回当前城市</div>
                         <div class="city-colum clearfix" id="home-citys">
                             <ul class="colum-left">
                                 <li class="clearfix">
