--- a/views/agreement.html
+++ b/views/agreement.html
@@ -56,8 +56,8 @@
 <body style="background: #f5f5f5">
 {% include "widget/common_hide/common_hide.html"%}
 {% include "widget/top/top.html" %}
-{% import "widget/new_nav_first/new_nav_red.html" as new_nav_red %}
-{{ new_nav_red.new_nav_red(tdk,helper) }}
+{% import "widget/new_nav_first/common_nav.html" as common_nav %}
+{{ common_nav.common_nav(tdk,helper) }}
 <div class="agreement">
   <h1 style="font-weight: 600"><i></i>金吉列用户注册协议</h1>
   <div class="agreementcon" style="padding-bottom: 20px">
@@ -183,8 +183,8 @@
     <p>【可转让】“金吉列”根据业务调整等情况，有权将本协议项下的权利和义务部分或全部转让给其他方，但须提前 5 日通知您。</p>
   </div>
 </div>
-{% include "widget/new_footer/new_footer.html" %}
+{% include "widget/new_footer/common_footer.html" %}
 </body>
-<script src="{{helper.cdnhost}}/assets/js/nav_liuxue_search.js"></script>
+<script src="{{helper.cdnhost}}/assets/js/nav_common.js"></script>
 <script src="{{helper.cdnhost}}/assets/js/footer.js"></script>
 </html>
