--- a/views/widget/new_footer/new_footer.css
+++ b/views/widget/new_footer/new_footer.css
@@ -109,6 +109,7 @@
   /*width: 120px;*/
   float: left;
   font-size: 16px;
+  width: 70px;
   line-height: 20px;
   background: url(../img/foot_03.png) no-repeat left center;
   padding-left:18px;
