--- a/views/widget/online_evaluation/online_evaluation.html
+++ b/views/widget/online_evaluation/online_evaluation.html
@@ -119,11 +119,11 @@
 								<option value="14">(W)武汉金吉列</option>
 								<option value="33">(W)无锡金吉列</option>
 								<option value="42">(W)温州金吉列</option>
+								<option value="47">(W)乌鲁木齐金吉列</option>
 								<option value="28">(X)厦门金吉列</option>
 								<option value="36">(X)徐州金吉列</option>
 								<option value="15">(X)西安金吉列</option>
 								<option value="45">(X)西宁金吉列</option>
-								<option value="47">(X)乌鲁木齐金吉列</option>
 								<option value="31">(Y)烟台金吉列</option>
 								<option value="40">(Y)银川金吉列</option>
 								<option value="44">(Y)宜昌金吉列</option>
