--- a/views/widget/top/top_yimin.html
+++ b/views/widget/top/top_yimin.html
@@ -301,7 +301,7 @@ input[type="checkbox"] {
       $(".top").append(val);
     } else {
       var val = '<div class="dui-layout-lg top-con" style="position: relative;">'+
-                '<div class="top-con-left">'+
+                '<div class="top-con-left" style="display: inline-block;width: 40%;">'+
                 '<img src="{{helper.cdnhost}}/assets/img/top_phone.png" alt="" class="top_400" style="margin-right: 3px;">'+
                 '<span style="font-size: 12px;color: #666;margin-left: 3px">400-010-8000</span>'+
                 '</div>'+
