修改顾问个人简介 审核人：淑琴

--- a/views/advisor_profile.html
+++ b/views/advisor_profile.html
@@ -206,6 +206,10 @@
     $("#word-num").html(150-geren.length);
   });
   function baocunSubmit () {
+    if ($('#gerenjieshao').val() == '') {
+      layer.msg('个人简介不能为空');
+      return false;
+    }
     $.ajax({
       url: '/soapi/user_ziliao',
       type:'POST',
